--- a/index-2.html
+++ b/index-2.html
@@ -3,8 +3,6 @@
 <head>
 <meta charset="UTF-8" />
 <title>Prospetto Entrate & Uscite</title>
-
-<!-- Tutto in un unico file; nessuna dipendenza esterna -->
 <style>
 :root{
   --line:28px;--lcol:#cdd7ee;--paper:#fbfcff;--ink:#1e293b;
@@ -21,18 +19,17 @@ h1{text-align:center;margin-bottom:2rem;font-size:2rem;text-transform:uppercase;
 .container{max-width:1200px;margin:0 auto}
 
 /* CARDS */
-.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));
-       gap:1rem;margin-bottom:2rem}
-.card{background:#ffffffe6;border:1px solid #888;padding:1rem;border-radius:10px;
-      text-align:center;box-shadow:0 2px 4px rgba(0,0,0,.08);backdrop-filter:blur(2px)}
+.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:1rem;margin-bottom:2rem}
+.card{background:#ffffffe6;border:1px solid #888;padding:1rem;border-radius:10px;text-align:center;
+      box-shadow:0 2px 4px rgba(0,0,0,.08);backdrop-filter:blur(2px)}
 .card h3{font-size:0.9rem;margin-bottom:0.25rem}
-.card p{font-size:1.4rem;font-weight:700}
+.card p{font-size:1.35rem;font-weight:700}
 .positive{color:var(--green)}.negative{color:var(--red)}
 
 /* TABLES */
 .table-wrap{overflow-x:auto}
-table{width:100%;border-collapse:collapse;margin-bottom:2rem;background:#ffffffdd;
-      border:1px solid #888;backdrop-filter:blur(2px)}
+table{width:100%;border-collapse:collapse;margin-bottom:2rem;background:#ffffffdd;border:1px solid #888;
+      backdrop-filter:blur(2px)}
 thead{background:#343434;color:#fff}
 th,td{padding:0.55rem 0.6rem;text-align:center;font-size:0.9rem}
 tbody tr:nth-child(even){background:#f1f5f9ee}
@@ -42,21 +39,20 @@ td.balance{font-weight:700}
 .balance.positive{color:var(--green)}
 .balance.negative{color:var(--red)}
 .month-sep td{background:var(--lav);font-weight:700;text-align:left;font-size:1rem;padding-left:0.4rem}
-.badge{display:inline-block;padding:0.1rem 0.45rem;border-radius:4px;font-size:0.68rem;
-       font-weight:700;color:#fff;text-transform:uppercase}
-.badge.income{background:var(--green)}.badge.expense{background:var(--red)}
+.badge{display:inline-block;padding:0.1rem 0.45rem;border-radius:4px;font-size:0.68rem;font-weight:700;color:#fff;text-transform:uppercase}
+.badge.income{background:var(--green)}
+.badge.expense{background:var(--red)}
 .sub-toggle{cursor:pointer}
 .hidden{display:none}
 
 /* FORM */
-form{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-     gap:0.5rem;margin-bottom:2rem}
+form{display:grid;grid-template-columns:repeat(auto-fit,minmax(150px,1fr));gap:0.5rem;margin-bottom:2rem}
 input,select,button{padding:0.35rem;border:1px solid #888;border-radius:4px;background:#fff7;font-family:inherit}
 button{cursor:pointer;font-weight:700;background:var(--lav)}
 
-/* Responsive extra-small */
+/* Responsive: colonna “Saldo” del dettaglio nascosta sotto 600 px */
 @media(max-width:600px){
-  th:nth-child(5),td:nth-child(5){display:none}      /* nascondi colonna Saldo nel dettaglio */
+  th:nth-child(5),td:nth-child(5){display:none}
   th,td{font-size:0.78rem}
 }
 </style>
@@ -93,46 +89,34 @@ button{cursor:pointer;font-weight:700;background:var(--lav)}
 </div>
 
 <script>
-/*------------- UTIL -------------*/
+/* --- UTIL --- */
 const START_BALANCE = 6100;
-const fmt = v => `€ ${Math.round(v).toLocaleString("it-IT")}`;
+const fmt = v => `€ ${Math.round(v).toLocaleString('it-IT')}`;
 const mk  = d => d.slice(0,7);
 const lastDay = (y,m)=>new Date(y,m+1,0).getDate();
 
-/*------------- CATEGORIE ABBONAMENTI -------------*/
-const subs = [
-  "Netflix","Will","ChatGPT","NowTV","Spotify",
-  "Prime Video AD","Prime","iCloud","YouTube+"
-];
-const subsSet = new Set(subs);      // per check veloce
+/* --- CATEGORIE ABBONAMENTO --- */
+const subsSet=new Set(["Netflix","Will","ChatGPT","NowTV","Spotify","Prime Video AD","Prime","iCloud","YouTube+"]);
 
-/*---------------- DATASET FISSO ----------------*/
-const subsData = [
-  ["Netflix",19,26,"2025-06"],["Will",7,28,"2025-06"],["ChatGPT",23,22,"2025-06"],
-  ["NowTV",5,19,"2025-07"],["Spotify",15,20,"2025-07"],["Prime Video AD",2,16,"2025-07"],
-  ["Prime",5,16,"2025-07"],["iCloud",10,23,"2025-07"],["YouTube+",9,11,"2025-07"]
-];
-const oneOff = [
-  ["2025-06-27","Aereo Sicilia",53,"Spesa"],
-  ["2025-07-12","Beat Canzone",35,"Spesa"],
-  ["2025-07-16","Mix Canzone",27,"Spesa"],
-  ["2025-07-27","Aereo Sicilia",53,"Spesa"],
-  ["2025-08-10","Rimborso 730",400,"Entrata"],
-  ["2025-08-12","Beat Canzone",35,"Spesa"],
-  ["2025-08-16","Mix Canzone",27,"Spesa"],
-  ["2025-07-15","Tredicesima",1300,"Entrata"]
-];
-const loan = ["2025-07-01","2025-08-01","2025-09-01","2025-10-01"]
-             .map(d=>[d,"Finanziamento",39,"Spesa"]);
+/* --- DATASET FISSO --- */
+const subsData=[["Netflix",19,26,"2025-06"],["Will",7,28,"2025-06"],["ChatGPT",23,22,"2025-06"],
+["NowTV",5,19,"2025-07"],["Spotify",15,20,"2025-07"],["Prime Video AD",2,16,"2025-07"],["Prime",5,16,"2025-07"],
+["iCloud",10,23,"2025-07"],["YouTube+",9,11,"2025-07"]];
+const oneOff=[["2025-06-27","Aereo Sicilia",53,"Spesa"],["2025-07-12","Beat Canzone",35,"Spesa"],
+["2025-07-16","Mix Canzone",27,"Spesa"],["2025-07-27","Aereo Sicilia",53,"Spesa"],
+["2025-08-10","Rimborso 730",400,"Entrata"],["2025-08-12","Beat Canzone",35,"Spesa"],
+["2025-08-16","Mix Canzone",27,"Spesa"],["2025-07-15","Tredicesima",1300,"Entrata"]];
+const loan=["2025-07-01","2025-08-01","2025-09-01","2025-10-01"].map(d=>[d,"Finanziamento",39,"Spesa"]);
 
-/*---------------- COSTRUISCI TRANSAZIONI ----------------*/
-let tx = [];
-const push = (d,c,t,a) => tx.push({date:d,category:c,type:t,amount:a});
+/* --- COSTRUISCI TRANSAZIONI --- */
+let tx=[];
+const push=(d,c,t,a)=>tx.push({date:d,category:c,type:t,amount:a});
 
-(function buildFixed(){
+/* genera ricorrenze */
+(function(){
   oneOff.forEach(o=>push(...o));
   loan.forEach(o => push(...o));
-  let cur = new Date(2025,5,24), end = new Date(2026,11,31);
+  let cur=new Date(2025,5,24), end=new Date(2026,11,31);
   while(cur<=end){
     const y=cur.getFullYear(), m=cur.getMonth(), iso=`${y}-${String(m+1).padStart(2,"0")}`;
     if(cur>=new Date("2025-07-01")){
@@ -154,22 +138,24 @@ const push = (d,c,t,a) => tx.push({date:d,category:c,type:t,amount:a});
   }
 })();
 
-/*--------------- RENDER ---------------*/
+/* --- RENDER --- */
 function render(){
-  const cardWrap=document.getElementById("cards");
-  const mBody   =document.querySelector("#monthly tbody");
-  const dBody   =document.querySelector("#detail tbody");
-  cardWrap.innerHTML=''; mBody.innerHTML=''; dBody.innerHTML='';
+  const cards=document.getElementById("cards"),
+        mBody=document.querySelector("#monthly tbody"),
+        dBody=document.querySelector("#detail tbody");
+  cards.innerHTML=''; mBody.innerHTML=''; dBody.innerHTML='';
 
   const sorted=[...tx].sort((a,b)=>new Date(a.date)-new Date(b.date));
-  /* mappa mesi anche vuoti */
-  const months={}, first=mk(sorted[0].date), last=mk(sorted[sorted.length-1].date);
-  let it=new Date(first+"-01"), end=new Date(last+"-01");
-  while(it<=end){
+
+  /* mappa mesi vuota */
+  const months={} , first=mk(sorted[0].date), last=mk(sorted[sorted.length-1].date);
+  let it=new Date(first+"-01"), stop=new Date(last+"-01");
+  while(it<=stop){
     months[mk(it.toISOString().slice(0,10))]={in:0,out:0,s:0};
     it.setMonth(it.getMonth()+1);
   }
 
+  /* calcola saldi */
   let bal=START_BALANCE;
   sorted.forEach(t=>{
     bal += t.type==='Entrata'?t.amount:-t.amount;
@@ -177,81 +163,81 @@ function render(){
     const k=mk(t.date);
     if(t.type==='Entrata') months[k].in  += t.amount;
     else                   months[k].out += t.amount;
-    months[k].s=bal;   // saldo dopo l'ultima operazione del mese
+    months[k].s = bal;
   });
 
-  /* cards */
+  /* CARD riepilogo */
   const keys=Object.keys(months);
   const totIn = keys.reduce((s,k)=>s+months[k].in ,0);
   const totOut= keys.reduce((s,k)=>s+months[k].out,0);
-  const avgOut= keys.length? Math.round(totOut/keys.length):0;
+  const avgOut= keys.length?Math.round(totOut/keys.length):0;
   [["Saldo iniziale",START_BALANCE],
-   ["Entrate totali",totIn,"positive"],
-   ["Uscite totali", totOut,"negative"],
+   ["Entrate totali", totIn,"positive"],
+   ["Uscite totali",  totOut,"negative"],
    ["Spesa media mese",avgOut,"negative"],
-   ["Saldo attuale",bal, bal>=0?'positive':'negative']]
-  .forEach(([l,v,cls])=>{
-    cardWrap.insertAdjacentHTML("beforeend",
-      `<div class="card"><h3>${l}</h3><p class="${cls||''}">${fmt(v)}</p></div>`);
+   ["Saldo attuale",bal,bal>=0?'positive':'negative']
+  ].forEach(([lbl,val,cls])=>{
+    cards.insertAdjacentHTML("beforeend",
+      `<div class="card"><h3>${lbl}</h3><p class="${cls||''}">${fmt(val)}</p></div>`);
   });
 
-  /* monthly */
+  /* tabella mensile */
   keys.forEach(k=>{
     const {in:inn,out,s}=months[k];
     mBody.insertAdjacentHTML("beforeend",
       `<tr><td>${k}</td><td class="income">${fmt(inn)}</td><td class="expense">${fmt(out)}</td><td class="balance ${s>=0?'positive':'negative'}">${fmt(s)}</td></tr>`);
   });
 
-  /* detail + abbonamenti toggle */
-  let curMonth='', subHeaderShown={};
+  /* DETTAGLIO + toggle abbonamenti */
+  let current='',  subHeader={};           // track per mese
   sorted.forEach(t=>{
-    const mkd=mk(t.date);
-    if(mkd!==curMonth){
-      curMonth=mkd;
-      subHeaderShown[curMonth]=false;
-      const label=new Date(`${mkd}-01`).toLocaleDateString("it-IT",{month:'long',year:'numeric'});
+    const month=mk(t.date);
+    if(month!==current){
+      current=month;
+      subHeader[month]=false;
+      const label=new Date(`${month}-01`).toLocaleDateString("it-IT",{month:'long',year:'numeric'});
       dBody.insertAdjacentHTML("beforeend",
         `<tr class="month-sep"><td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td></tr>`);
     }
     if(subsSet.has(t.category)){
-      if(!subHeaderShown[curMonth]){
+      if(!subHeader[month]){
         dBody.insertAdjacentHTML("beforeend",
-          `<tr class="sub-toggle" data-month="${curMonth}">
-             <td colspan="5">► Abbonamenti</td>
-           </tr>`);
-        subHeaderShown[curMonth]=true;
+          `<tr class="sub-toggle" data-month="${month}"><td colspan="5">► Abbonamenti</td></tr>`);
+        subHeader[month]=true;
       }
-      dBody.insertAdjacentHTML("beforeend",rowHTML(t,`subs-${curMonth} hidden`));
+      dBody.insertAdjacentHTML("beforeend",rowHTML(t,`subs-${month} hidden`));
     }else{
       dBody.insertAdjacentHTML("beforeend",rowHTML(t));
     }
   });
 }
-function rowHTML(t,cls=''){return `<tr class="${cls}">
-  <td>${t.date}</td>
-  <td>${t.category}</td>
-  <td><span class="badge ${t.type==='Entrata'?'income':'expense'}">${t.type}</span></td>
-  <td class="${t.type==='Entrata'?'income':'expense'}">${fmt(t.amount)}</td>
-  <td class="balance ${t.balance>=0?'positive':'negative'}">${fmt(t.balance)}</td>
-</tr>`}
+function rowHTML(t,extra=''){
+  return `<tr class="${extra}">
+    <td>${t.date}</td>
+    <td>${t.category}</td>
+    <td><span class="badge ${t.type==='Entrata'?'income':'expense'}">${t.type}</span></td>
+    <td class="${t.type==='Entrata'?'income':'expense'}">${fmt(t.amount)}</td>
+    <td class="balance ${t.balance>=0?'positive':'negative'}">${fmt(t.balance)}</td>
+  </tr>`;
+}
 render();
 
 /* toggle abbonamenti */
 document.querySelector("#detail").addEventListener("click",e=>{
-  const tr=e.target.closest(".sub-toggle");
-  if(!tr) return;
-  const m=tr.dataset.month;
-  const rows=document.querySelectorAll(`.subs-${m}`);
-  const isHidden=[...rows][0].classList.contains("hidden");
-  rows.forEach(r=>r.classList.toggle("hidden",!isHidden));
-  tr.firstChild.textContent=isHidden? "▼ Abbonamenti":"► Abbonamenti";
+  const row=e.target.closest(".sub-toggle");
+  if(!row) return;
+  const m=row.dataset.month;
+  const nodes=document.querySelectorAll(`.subs-${m}`);
+  const hidden=[...nodes][0].classList.contains("hidden");
+  nodes.forEach(n=>n.classList.toggle("hidden",!hidden));
+  row.querySelector("td").textContent = hidden? "▼ Abbonamenti" : "► Abbonamenti";
 });
 
 /* form manuale */
 document.getElementById("manual").addEventListener("submit",e=>{
   e.preventDefault();
   const d=document.getElementById("m-date").value,
-        c=document.getElementById("m-cat").value,
+        c=document.getElementById("m-cat").value.trim(),
         t=document.getElementById("m-type").value,
         a=parseFloat(document.getElementById("m-amt").value);
   if(!d||!c||isNaN(a)) return;
